# q_tokenizer

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/q_tokenizer/: _init__.py  tokenizer.py
