[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q-tokenizer"
version = "0.1.0"
description = "A lightweight, standalone Qwen tokenizer with string utilities."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "zack", email = "onebucket@proton.me"}
]
keywords = ["qwen", "tokenizer", "nlp", "llm", "tiktoken"]
dependencies = ["tiktoken"]

[tool.setuptools]
# This ensures qwen.tiktoken are included
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/buckethq/q-tokenizer"

